--- a/lecture data j.s/14for loop.html
+++ b/lecture data j.s/14for loop.html
@@ -23,7 +23,7 @@
         //     data = Number.parseInt(data)
         //     console.log(data);
 
-        let array = ["nikhil", "raj", "raxit", "nirmal"]
+        let array = ["nikhil", "raj", "vimal", "pankaj"]
         console.log(array);
 
         for (let index = 0; index < array.length; index++){
