--- a/task j.s/calculator.html
+++ b/task j.s/calculator.html
@@ -58,6 +58,8 @@
                     <td>
                         <input type="button" id="div" onclick="divide()" value="/" class="btn4">
                         <input type="button" id="mod" onclick="modulus()" value="%" class="btn5">
+                        <!-- <button onclick="modulus()">Modulus</button> -->
+
                     </td>
                     <td>
                         <div class="end">
