--- a/task j.s/marksheet.html
+++ b/task j.s/marksheet.html
@@ -26,7 +26,7 @@
                     </td>
                     <td>
                         <label name="number1"></label>
-                        <input type="number" id="first" placeholder="Enter Your Mark">
+                        <input type="number" id="clanguage" placeholder="Enter Your Mark">
                     </td>
                 </tr>
 
@@ -36,7 +36,7 @@
                     </td>
                     <td>
                         <label name="number1"></label>
-                        <input type="number" id="second" placeholder="Enter Your Mark">
+                        <input type="number" id="cilanguage" placeholder="Enter Your Mark">
                     </td>
                 </tr>
 
@@ -46,7 +46,7 @@
                     </td>
                     <td>
                         <label name="number1"></label>
-                        <input type="number" id="" placeholder="Enter Your Mark">
+                        <input type="number" id="database" placeholder="Enter Your Mark">
                     </td>
                 </tr>
 
@@ -56,7 +56,7 @@
                     </td>
                     <td>
                         <label name="number1"></label>
-                        <input type="number" id="" placeholder="Enter Your Mark">
+                        <input type="number" id="html" placeholder="Enter Your Mark">
                     </td>
                 </tr>
 
@@ -66,7 +66,7 @@
                     </td>
                     <td>
                         <label name="number1"></label>
-                        <input type="number" id="" placeholder="Enter Your Mark">
+                        <input type="number" id="css" placeholder="Enter Your Mark">
                     </td>
                 </tr>
 
@@ -76,7 +76,7 @@
                     </td>
                     <td>
                         <label name="number1"></label>
-                        <input type="number" id="" placeholder="Enter Your Mark">
+                        <input type="number" id="php" placeholder="Enter Your Mark">
                     </td>
                 </tr>
 
@@ -86,13 +86,14 @@
                     </td>
                     <td>
                         <label name="number1"></label>
-                        <input type="number" id="" placeholder="Enter Your Mark">
+                        <input type="number" id="corejava" placeholder="Enter Your Mark">
                     </td>
                 </tr>
 
                 <tr>
+                    <td></td>
                         <td colspan="2">
-                            <button id="calculateButton">Calculate Result</button>
+                            <button id="result" onclick=" getInputValues()"> Result</button>
                         </td>
                     <!-- <td>
                         <label for="text"></label>
