--- a/assinment js/marksheet (3)/marksheet.html
+++ b/assinment js/marksheet (3)/marksheet.html
@@ -93,7 +93,7 @@
                 <tr>
                     <td></td>
                         <td colspan="2">
-                            <button id="result" onclick=" getInputValues()"> Result</button>
+                            <button id="result" onclick=" resulttotal()"> Result </button>
                         </td>
                     <!-- <td>
                         <label for="text"></label>
@@ -103,10 +103,11 @@
 
                 <tr>
                     <td>
-                        <p>Total is : / 350</p>
+                        <p>Total is : <span style="color: blue;" id="totaldata"></span> / 700</p>
                     </td>
                     <td>
-                        Percentage is : %
+                        <p>Percentage is : <span style="color: blue;" id="per"></span> %</p>
+                        
                     </td>
                 </tr>
             </table>
