--- a/lecture data j.s/14for of loop.html
+++ b/lecture data j.s/14for of loop.html
@@ -18,6 +18,10 @@
         
         console.log(name);
 
+        for (const a of "radhakrishna") {
+            console.log(a);
+        }
+
 
 
 
