--- a/lecture data j.s/21 slider2.html
+++ b/lecture data j.s/21 slider2.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>click slider</title>
 
     <style>
-        section{
+        section {
             height: 500px;
             width: 1000px;
             margin: 20px auto;
@@ -14,19 +15,23 @@
             position: relative;
             overflow: hidden;
         }
-        img{
+
+        img {
             width: 100%;
             position: absolute;
             transition: 2s;
         }
-        .nav{
+
+        .nav {
             text-align: center;
         }
-        .nav button{
-            padding: 10px 20px ;
+
+        .nav button {
+            padding: 10px 20px;
         }
     </style>
 </head>
+
 <body>
 
     <section>
@@ -62,13 +67,13 @@
 
         function slideimg() {
             slide.forEach(
-            (img) => {
-                console.log(img);
-                img.style.transform = `translateX(${-count * 100}%)`
-            }
-        )
+                (img) => {
+                    console.log(img);
+                    img.style.transform = `translateX(${-count * 100}%)`
+                }
+            )
         }
-        
+
         goPrew = () => {
             count--
             console.log(goPrew);
@@ -78,16 +83,13 @@
             slideimg()
         }
         goNext = () => {
-            count++
-            console.log(goNext);
-            // if (count === 4) {
-            //     count = 0
-            // }
-            if (count >= sliderdata.length){
-                count = 0
+            count++;
+            if (count >= slide.length) {
+                count = 0;
             }
-            slideimg()
+            slideimg();
         }
     </script>
 </body>
+
 </html>
