--- a/jquery/06after.html
+++ b/jquery/06after.html
@@ -12,7 +12,6 @@
             color: aliceblue;
         }
     </style>
-      <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
 </head>
 <body>
     
@@ -23,6 +22,9 @@
     </div>
 
     <button id="after">after btn</button>
+
+    <script src="./jquery-3.7.1.min.js"></script>
+
     <script>
 
         let name = "nikhil"
