--- a/jquery/10clone.html
+++ b/jquery/10clone.html
@@ -33,7 +33,6 @@
             justify-content: space-between
         }
     </style>
-    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
 
 </head>
 
@@ -71,6 +70,8 @@
     </section>
 
     <button id="cln">clone</button>
+
+    <script src="./jquery-3.7.1.min.js"></script>
 
     <script>
         // $(document).ready(function () {
