--- a/jquery/11height.html
+++ b/jquery/11height.html
@@ -9,13 +9,13 @@
       width: 50px;
       height: 70px;
       float: left;
+      display: flex;
       margin: 5px;
       padding: 20px;
       background: rgb(255, 140, 0);
       cursor: pointer;
     }
   </style>
-  <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
 </head>
 
 <body onresize="resize()">
@@ -26,16 +26,26 @@
   <div>4</div>
   <div>5</div>
 
+  <script src="./jquery-3.7.1.min.js"></script>
+
+
   <script>
-    $( "  body" ).one( "click", function() {
+    $( "  div" ).one( "click", function() {
       // console.log($( this ).height(50));
 
-      $( this ).css({
+      $( this ).height(200).css({
         cursor: "auto",
-        backgroundColor: "black",
+        backgroundColor: "green",
         padding: "30px",
         color : "white"
-      });
+
+      })
+      // $( this ).css({
+      //   cursor: "auto",
+      //   backgroundColor: "black",
+      //   padding: "30px",
+      //   color : "white"
+      // });
     });
 
     function resize() {
