--- a/jquery/12width.html
+++ b/jquery/12width.html
@@ -13,7 +13,6 @@
     cursor: pointer;
   }
   </style>
-  <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
 </head>
 <body>
  
@@ -22,6 +21,9 @@
 <div></div>
 <div></div>
 <div></div>
+
+<script src="./jquery-3.7.1.min.js"></script>
+
  
 <script>
 $( "div" ).one( "click", function() {
