--- a/lecture data j.s/11conditional statements.html
+++ b/lecture data j.s/11conditional statements.html
@@ -59,7 +59,7 @@
             alert("not a number")
         }
         else{
-            alert("pass+") 
+            alert("tayping  of valid marks.") 
         }
 
 
