--- a/lecture data j.s/12typecasting.html
+++ b/lecture data j.s/12typecasting.html
@@ -12,9 +12,25 @@
     <script>
 
         let data = prompt("enter your marks")
-            data = Number.parseInt(data)
+        data = Number.parseInt(data)
 
-        console.log(typeof data ,data);
+        console.log(typeof data, data);
+
+        // if (data <= 35) {
+        //     alert("fail")
+        // }
+        // else if (data > 35 && data <= 50) {
+        //     alert("avr")
+        // }
+        // else if (data > 50 && data <= 80) {
+        //     alert("good")
+        // }
+        // else if (data > 100) {
+        //     alert("not a number")
+        // }
+        // else {
+        //     alert("tayping  of valid marks.")
+        // }
 
     </script>
 
