--- a/lecture data j.s/14for in loop.html
+++ b/lecture data j.s/14for in loop.html
@@ -22,9 +22,14 @@
             {
                 name: "raj",
                 age: 20
+            },
+            {
+                name: "sandip",
+                age: 19
             }
         ]
         console.log(user[0]);
+        // console.log(user[1]);
 
         let a = {
             name: "nikhil",
