--- a/lecture data j.s/08 function.html
+++ b/lecture data j.s/08 function.html
@@ -37,9 +37,10 @@
         // console.log(a + b - 4 + a * 2 - 8 / 2);
         // console.log(c + d - 4 + c * 2 - 8 / 2);
 
-        console.log(sum(a,b));
+        console.log(sum(a,f));
         console.log(sum(c,d));
         console.log(sum(e,f));
+        console.log(sum(f,e));
 
     </script>
 </body>
