--- a/lecture data j.s/04 Assignment operators.html
+++ b/lecture data j.s/04 Assignment operators.html
@@ -14,7 +14,7 @@
         let c = a+b
 
         console.log(a,b,c);
-        // console.log(a = 8);
+        console.log(a = 8);
         console.log(a += 5);
         console.log(a -= 4);
         console.log(a += 5);
