--- a/lecture data j.s/05 Comparison operators.html
+++ b/lecture data j.s/05 Comparison operators.html
@@ -10,11 +10,12 @@
 
     <script>
 
-        let a = 4
+        let a = 7
         let b = 6
 
         // console.log(a = b);
         console.log(typeof b)
+        console.log(typeof a)
         console.log(a == b);
         console.log(a != b);
         console.log(a === b);
