--- a/lecture data j.s/09BomVsDom.html
+++ b/lecture data j.s/09BomVsDom.html
@@ -31,8 +31,7 @@
         console.log(Oh);
 
 
-        let name = "Nikhil Rangadiya"
-
+        let name = "Nikhil c Rangadiya"
         alert("hello welcome to my webpage")
         confirm("are you sure to login")
         prompt("enter your age")
