--- a/lecture data j.s/10Dom.html
+++ b/lecture data j.s/10Dom.html
@@ -58,7 +58,7 @@
         // console.log(logo);
 
         let element = document.querySelector("#logo")
-        element.innerText = "Rangadiya"
+        element.innerText = "Rangadiya Nikhil"
         console.log(element)
 
     </script>
