--- a/lecture data j.s/17foreach.html
+++ b/lecture data j.s/17foreach.html
@@ -12,7 +12,7 @@
 
     <script>
 
-        let name = ["mehul", "haresh", "akshay", "vimal"]
+        let name = ["mehul", "haresh", "akshay", "pankaj"]
 
         // console.log(name);
         // document.write(name)
